--- a/app/src/main/res/layout/game_board.xml
+++ b/app/src/main/res/layout/game_board.xml
@@ -3,50 +3,15 @@
     android:layout_height="match_parent"
     android:clipChildren="false">
 
-    <LinearLayout
-        android:id="@+id/turn_indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="5dp"
-            android:text="Turn:"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <ImageView
-            android:id="@+id/turn_indicator_image_view"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/red" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/winner_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/turn_indicator"
-        android:gravity="center_horizontal"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:text="Winner!"
-        android:textSize="40sp"
-        android:textStyle="bold" />
+    <include
+        android:id="@+id/player_info"
+        layout="@layout/board_players_information" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/game_board"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@+id/winner_text"
+        android:layout_below="@+id/player_info"
         android:clipChildren="false"
         android:gravity="bottom"
         android:orientation="vertical"
