--- a/app/src/main/res/layout/game_board.xml
+++ b/app/src/main/res/layout/game_board.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     android:clipChildren="false">
 
     <include
@@ -11,6 +12,7 @@
         android:id="@+id/game_board"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
+
         android:layout_below="@+id/player_info"
         android:clipChildren="false"
         android:gravity="bottom"
