--- a/app/src/main/res/drawable/radio_btn_selected_yellow.xml
+++ b/app/src/main/res/drawable/radio_btn_selected_yellow.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <gradient
@@ -5,4 +6,7 @@
         android:centerColor="@color/yellow"
         android:endColor="@color/yellow"
         android:angle="270" />
+    <stroke
+        android:width="3dp"
+        android:color="@color/colorAccent" />
 </shape>
