--- a/app/src/main/res/layout/activity_game_menu.xml
+++ b/app/src/main/res/layout/activity_game_menu.xml
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <info.overrideandroid.connect4.view.MenuView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:id="@+id/menuView"
-    android:background="@color/white"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context="info.overrideandroid.connect4.activity.GameMenuActivity">
-<ImageView
-    android:layout_marginTop="20dp"
-    android:id="@+id/logo"
-    android:layout_centerHorizontal="true"
-    android:layout_width="200dp"
-    android:layout_height="50dp"
-    android:src="@drawable/connect_logo"/>
+
+    <TextView
+        android:id="@+id/logo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:gravity="center_horizontal"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:text="Connect 4"
+        android:textColor="@color/black"
+        android:textSize="@dimen/app_title"
+        android:textStyle="bold" />
+
     <LinearLayout
-        android:layout_below="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/play"
+        android:layout_below="@+id/logo"
         android:layout_centerInParent="true"
         android:gravity="center"
         android:orientation="vertical"
@@ -64,8 +71,7 @@
             android:id="@+id/player1_disc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <RadioButton
                 android:id="@+id/disc_red"
