--- a/app/src/main/res/layout/board_row.xml
+++ b/app/src/main/res/layout/board_row.xml
@@ -1,9 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="-2dp"
-    android:background="#fff"
+    android:background="@color/white"
     android:clipChildren="false">
 
     <ImageView
