--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<info.overrideandroid.connect4.board.BoardView xmlns:android="http://schemas.android.com/apk/res/android"
+<info.overrideandroid.connect4.view.BoardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/gameView"
     tools:context="info.overrideandroid.connect4.activity.GamePlayActivity">
 
-</info.overrideandroid.connect4.board.BoardView>
+</info.overrideandroid.connect4.view.BoardView>
