--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="option_title_size">20sp</dimen>
     <dimen name="seekbar_text_size">17sp</dimen>
     <dimen name="app_title">50sp</dimen>
+    <dimen name="play_font_size">25sp</dimen>
 </resources>
