--- a/app/src/main/res/drawable/win_red.xml
+++ b/app/src/main/res/drawable/win_red.xml
@@ -7,5 +7,5 @@
        />
     <stroke
         android:width="10dp"
-        android:color="@color/white" />
+        android:color="@android:color/white" />
 </shape>
