--- a/app/src/main/res/drawable/win_yellow.xml
+++ b/app/src/main/res/drawable/win_yellow.xml
@@ -8,5 +8,5 @@
         android:angle="270" />
     <stroke
         android:width="10dp"
-        android:color="@color/white" />
+        android:color="@android:color/white" />
 </shape>
