--- a/app/src/main/res/drawable/radio_btn_default_right_corner.xml
+++ b/app/src/main/res/drawable/radio_btn_default_right_corner.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="@color/white"
-        android:centerColor="@color/white"
-        android:endColor="@color/white"
+        android:startColor="@android:color/white"
+        android:centerColor="@android:color/white"
+        android:endColor="@android:color/white"
         android:angle="270" />
     <stroke
         android:width="1dp"
