--- a/app/src/main/res/layout/activity_game_menu.xml
+++ b/app/src/main/res/layout/activity_game_menu.xml
@@ -4,22 +4,21 @@
     android:id="@+id/menuView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@android:color/white"
     tools:context="info.overrideandroid.connect4.activity.GameMenuActivity">
 
     <TextView
         android:drawableLeft="@mipmap/ic_launcher"
-        android:id="@+id/logo"
+        android:id="@+id/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:drawablePadding="10dp"
-
         android:layout_centerHorizontal="true"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:text="@string/app_name"
-        android:textColor="@color/black"
+        android:textColor="@android:color/black"
         android:textSize="@dimen/app_title"
         android:textStyle="bold" />
 
@@ -181,7 +180,7 @@
         android:layout_alignParentStart="true"
         android:background="@color/colorPrimary"
         android:text="@string/play"
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         android:textSize="@dimen/play_font_size"
         android:textStyle="bold" />
 </info.overrideandroid.connect4.view.MenuView>
