--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -15,7 +15,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:text="@string/app_name"
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         android:textSize="@dimen/app_title"
         android:textStyle="bold" />
 </LinearLayout>
