--- a/app/src/main/res/layout/board_row.xml
+++ b/app/src/main/res/layout/board_row.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="-2dp"
-    android:background="@color/white"
+    android:background="@android:color/white"
     android:clipChildren="false">
 
     <ImageView
