--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- different text sizes-->
     <dimen name="option_title_size">20sp</dimen>
     <dimen name="seekbar_text_size">17sp</dimen>
     <dimen name="app_title">50sp</dimen>
