--- a/app/src/main/res/layout/activity_game_menu.xml
+++ b/app/src/main/res/layout/activity_game_menu.xml
@@ -26,13 +26,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/play"
-        android:layout_below="@+id/logo"
+        android:layout_below="@+id/app_name"
         android:layout_centerInParent="true"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="@dimen/activity_horizontal_margin"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
         android:paddingTop="@dimen/activity_horizontal_margin">
 
         <TextView
