--- a/app/src/main/res/layout/board_players_information.xml
+++ b/app/src/main/res/layout/board_players_information.xml
@@ -26,8 +26,8 @@
 
                 <ImageView
                     android:id="@+id/player1_disc"
-                    android:layout_width="42dp"
-                    android:layout_height="42dp"
+                    android:layout_width="@dimen/player_indicator_image_size"
+                    android:layout_height="@dimen/player_indicator_image_size"
                     android:layout_centerInParent="true"
                     android:src="@drawable/red_disc" />
 
@@ -66,8 +66,8 @@
 
                 <ImageView
                     android:id="@+id/player2_disc"
-                    android:layout_width="42dp"
-                    android:layout_height="42dp"
+                    android:layout_width="@dimen/player_indicator_image_size"
+                    android:layout_height="@dimen/player_indicator_image_size"
                     android:layout_centerInParent="true"
                     android:src="@drawable/red_disc" />
 
