--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4a90e2</color>
-    <color name="colorPrimaryDark">#2f68ab</color>
+    <!--<color name="colorPrimary">#4a90e2</color>-->
+    <color name="colorPrimary">#1FCFC1</color>
+    <color name="colorPrimaryDark">#1a877f</color>
     <color name="colorAccent">#4a90e2</color>
     <color name="red">#f22a2d</color>
     <color name="yellow">#ffce48</color>
